add trainer workload service and missing features
